# interviewcopilot

./: .cursorrules  .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  playwright.ci.config.ts  playwright.config.ts  playwright.hardening.config.ts  playwright.prod.config.ts  tailwind.config.ts  tsconfig.json
.config/: .env.example  config.dev.toml  config.prod.toml
.cursor/rules/: frontend-conversion-ux.mdc  nextjs-api-reliability.mdc  yc-outcome-priority.mdc
.cursor/skills/agentmail-mcp/: SKILL.md
.cursor/skills/interviewcopilot-growth-experiments/: SKILL.md
.cursor/skills/interviewcopilot-release-gates/: SKILL.md
.cursor/skills/interviewcopilot-yc-ship/: SKILL.md
.cursor/skills/sfms-booking-engine/: SKILL.md
.cursor/skills/sfms-data-layer/: SKILL.md
.cursor/skills/sfms-devops-deploy/: SKILL.md
.github/workflows/: ci.yml  deploy-vercel.yml
backend/: README.md  pyproject.toml
backend/src/infinityhire/: main.py
db/: init.sql  seed.sql
docker/: docker-compose.yml
docs/: PROJECT_STRUCTURE.md  analytics-events-and-kpis.md  beta-testing-plan-intelliforge-interns.md  growth-30-day-content-calendar.md  release-runbook.md  test-accounts-and-qa.md  yc-pitch-infinityhire-copilot.md
frontend/: README.md
scripts/: db-seed.cjs
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/lib/: api.ts  types.ts
src/types/: global.d.ts
tests/e2e/: auth-and-session.spec.ts  dashboard-and-billing.spec.ts  landing-and-auth-edges.spec.ts  security-hardening.spec.ts  session-flow.spec.ts  yc-features.spec.ts
(+63 files in other folders)
